--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
+<body class="bg-gradient-to-b from-yellow-600 to-blue-600 min-h-screen flex flex-col min-w-screen">
+</body>
 <!--Navbar-->
 
 <!--Main-->
 <main>
-  <div>
-    
-  </div>
+<p>Test text</p>
 </main>
 <!--Footer-->
 <footer>
