--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Home</title>
-</head>
-<body class="bg-gradient-to-b from-yellow-600 to-blue-600 min-h-screen flex flex-col min-w-screen">
-</body>
-<!--Navbar-->
-
-<!--Main-->
-<main>
-<p>Test text</p>
-</main>
-<!--Footer-->
-<footer>
-
-</footer>
+  </head>
+  <header>
+  <!--Navbar-->
+  </header>
+  <!--Main-->
+  <body class="parallax">
+    <main>
+      <p>Test text</p>
+    </main>
+    <!--Footer-->
+    <footer>
+      Oke Amuwha
+      &copy 2022
+    </footer>
+  </body>
+</html>
