Added profile picture (placeholder)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   </header>
   <!--Main-->
   <body class="parallax">
-    <main>
-      <p>Test text</p>
+    <main class="flex justify-center">
+      <div class="flex flex-col">
+        <img class="w-1000 h-1000 rounded-lg mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="200" height="200">
+        <div class="flex flex-col bg-gray-100 rounded-lg p-5">
+          <p>Test text</p>
+        </div>
+      </div>
     </main>
     <!--Footer-->
     <footer>
