Added logo and more components to cover

--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
   </header>
   <!--Main-->
   <body class="parallax">
-    <main class="flex justify-center">
+    <main class="p-10">
       <div class="flex flex-col">
-        <img class="w-1000 h-1000 rounded-lg mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="200" height="200">
-        <div class="flex flex-col bg-gray-100 rounded-lg p-5">
-          <p>Test text</p>
+        <!--Cover-->
+        <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="400" height="400">
+        <div class="mx-auto pb-20 text-gray-100 text-center">
+          <p class="text-5xl font-bold pt-10">Oke Amuwha</p>
+          <p class="mb-5 p-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac.</p>
+          <img class="mx-auto" src="images/Logo.png" alt="Logo" width="100"> <!--Logo-->
+        </div>
+        <!--School-->
+        <div class="flex flex-col bg-gray-100 rounded-lg p-10 px-50">
+          <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div>
+          <p class="text-3xl font-bold pt-10 mx-auto">Wayne State University</p>
+          <p>Bachelor of Science in Computer Science</p>
         </div>
       </div>
     </main>
