Changed logo and added two sections

--- a/index.html
+++ b/index.html
@@ -19,13 +19,28 @@
         <div class="mx-auto pb-20 text-gray-100 text-center">
           <p class="text-5xl font-bold pt-10">Oke Amuwha</p>
           <p class="mb-5 p-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac.</p>
-          <img class="mx-auto" src="images/Logo.png" alt="Logo" width="100"> <!--Logo-->
+          <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="100"> <!--Logo-->
         </div>
         <!--School-->
-        <div class="flex flex-col bg-gray-100 rounded-lg p-10 px-50">
-          <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div>
-          <p class="text-3xl font-bold pt-10 mx-auto">Wayne State University</p>
-          <p>Bachelor of Science in Computer Science</p>
+        <div class="flex flex-col bg-gray-100 rounded-lg p-10 px-50 pb-20">
+          <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div> <!--School svg here-->
+          <div class="text-center">
+            <p class="text-3xl font-bold pt-10">Wayne State University</p>
+            <!--About Me-->
+            <p class="pb-20">Bachelor of Science in Computer Science</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+              Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
+              Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
+              Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
+              Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
+              Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
+              Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
+              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.</p>
+        </div>
+        </div>
+        <!--Skills-->
+        <div class="flex flex-col bg-blue-300 rounded-lg p-10 px-50">
+          <h1>Skills</h1>
         </div>
       </div>
     </main>
