Added rest of layout and cleaned up a bit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <!--Main-->
   <body class="parallax">
-    <main class="p-10">
+    <main>
       <div class="flex flex-col">
         <!--Cover-->
         <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="400" height="400">
@@ -22,13 +22,13 @@
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="100"> <!--Logo-->
         </div>
         <!--School-->
-        <div class="flex flex-col bg-gray-100 rounded-lg p-10 px-50 pb-20">
+        <div class="flex flex-col bg-gray-100 rounded-lg px-50 pb-20">
           <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div> <!--School svg here-->
           <div class="text-center">
             <p class="text-3xl font-bold pt-10">Wayne State University</p>
             <!--About Me-->
-            <p class="pb-20">Bachelor of Science in Computer Science</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+            <p class="mb-20">Bachelor of Science in Computer Science</p>
+            <p class="mb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
               Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
               Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
               Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
@@ -36,18 +36,26 @@
               Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
               Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
               Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.</p>
-        </div>
-        </div>
+
         <!--Skills-->
-        <div class="flex flex-col bg-blue-300 rounded-lg p-10 px-50">
-          <h1>Skills</h1>
+        <div class="flex flex-col bg-blue-600 rounded-lg p-10">
+          <h1 class="text-gray-100 text-3xl text-left font-bold">Skills</h1>
+        </div>
+        <!--Projects-->
+        <h1 class="text-3xl text-left font-bold p-10">Projects</h1>
+        <!--Work Experience-->
+        <div class="flex flex-col bg-blue-600 rounded-lg p-10">
+          <h1 class="text-gray-100 text-3xl text-left font-bold">Work Experience</h1>
+        </div>
+        <hr>
+        <footer>
+          Oke Amuwha
+          &copy 2022
+        </footer>
+        </div>
         </div>
       </div>
     </main>
     <!--Footer-->
-    <footer>
-      Oke Amuwha
-      &copy 2022
-    </footer>
   </body>
 </html>
