--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="flex flex-col bg-gray-100 rounded-lg px-50 pb-20">
           <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div> <!--School svg here-->
           <div class="text-center">
-            <p class="text-3xl font-bold pt-10">Wayne State University</p>
+            <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
             <p class="mb-20">Bachelor of Science in Computer Science</p>
             <p class="mb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
@@ -37,21 +37,21 @@
               Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
               Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.</p>
 
-        <!--Skills-->
-        <div class="flex flex-col bg-blue-600 rounded-lg p-10">
-          <h1 class="text-gray-100 text-3xl text-left font-bold">Skills</h1>
-        </div>
-        <!--Projects-->
-        <h1 class="text-3xl text-left font-bold p-10">Projects</h1>
-        <!--Work Experience-->
-        <div class="flex flex-col bg-blue-600 rounded-lg p-10">
-          <h1 class="text-gray-100 text-3xl text-left font-bold">Work Experience</h1>
-        </div>
-        <hr>
-        <footer>
-          Oke Amuwha
-          &copy 2022
-        </footer>
+          <!--Skills-->
+          <div class="flex flex-col bg-blue-600 rounded-lg p-10">
+            <h1 class="text-gray-100 text-3xl text-left font-bold">Skills</h1>
+          </div>
+          <!--Projects-->
+          <h1 class="text-3xl text-left font-bold p-10">Projects</h1>
+          <!--Work Experience-->
+          <div class="flex flex-col bg-blue-600 rounded-lg p-10">
+            <h1 class="text-gray-100 text-3xl text-left font-bold">Work Experience</h1>
+          </div>
+          <hr>
+          <footer>
+            Oke Amuwha
+            &copy 2022
+          </footer>
         </div>
         </div>
       </div>
