--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <!--Main-->
   <body class="parallax">
-    <main>
+    <main class="pt-20">
       <div class="flex flex-col">
         <!--Cover-->
         <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="400" height="400">
@@ -38,14 +38,46 @@
               Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.</p>
 
           <!--Skills-->
-          <div class="flex flex-col bg-blue-600 rounded-lg p-10">
-            <h1 class="text-gray-100 text-3xl text-left font-bold">Skills</h1>
+          <div class="flex flex-col bg-blue-600 text-gray-100 rounded-lg p-10">
+            <h1 class="text-3xl text-left font-bold">Skills</h1>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
           </div>
           <!--Projects-->
-          <h1 class="text-3xl text-left font-bold p-10">Projects</h1>
+          <div class="p-10 mb-10">
+            <h1 class="text-3xl text-left font-bold">Projects</h1>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+          </div>
           <!--Work Experience-->
-          <div class="flex flex-col bg-blue-600 rounded-lg p-10">
-            <h1 class="text-gray-100 text-3xl text-left font-bold">Work Experience</h1>
+          <div class="flex flex-col bg-blue-600 text-gray-100 rounded-lg p-10">
+            <h1 class="text-3xl text-left font-bold">Work Experience</h1>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
+            <p class="text-xl">SAMPLE TEXT</p>
           </div>
           <hr>
           <footer>
