Removed redundant code. Added grid layout

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="100"> <!--Logo-->
         </div>
         <!--School-->
-        <div class="flex flex-col bg-gray-100 rounded-lg px-50 pb-20">
+        <div class="bg-gray-100 rounded-lg py-20">
           <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div> <!--School svg here-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
             <p class="mb-20">Bachelor of Science in Computer Science</p>
-            <p class="mb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+            <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
               Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
               Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
               Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
@@ -38,46 +38,52 @@
               Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.</p>
 
           <!--Skills-->
-          <div class="flex flex-col bg-blue-600 text-gray-100 rounded-lg p-10">
+          <div class="bg-blue-600 text-gray-100 rounded-lg p-10">
             <h1 class="text-3xl text-left font-bold">Skills</h1>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
+            <div class="grid grid-cols-2 md:grid-cols-4 pt-10">
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+            </div>
           </div>
           <!--Projects-->
           <div class="p-10 mb-10">
             <h1 class="text-3xl text-left font-bold">Projects</h1>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
+            <div class="grid grid-cols-2 md:grid-cols-4 pt-10">
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+            </div>
           </div>
           <!--Work Experience-->
-          <div class="flex flex-col bg-blue-600 text-gray-100 rounded-lg p-10">
+          <div class="bg-blue-600 text-gray-100 rounded-lg p-10">
             <h1 class="text-3xl text-left font-bold">Work Experience</h1>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
-            <p class="text-xl">SAMPLE TEXT</p>
+            <div class="grid grid-cols-2 md:grid-cols-4 pt-10">
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+              <p class="text-xl">SAMPLE TEXT</p>
+            </div>
           </div>
           <hr>
           <footer>
