--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Portfolio</title>
   </head>
   <header>
   <!--Navbar-->
@@ -38,41 +38,58 @@
               Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.</p>
 
           <!--Skills-->
-          <div class="bg-blue-600 text-gray-100 rounded-lg p-10">
+          <div class="bg-blue-600 text-gray-100 rounded-xl p-10">
             <h1 class="text-3xl text-left font-bold">Skills</h1>
-            <div class="grid grid-cols-2 md:grid-cols-4 pt-10">
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
+              <!--Skill 1-->
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
+              <div>
+                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                <p class="pt-2 text-lg">Name</p>
+              </div>
             </div>
           </div>
           <!--Projects-->
           <div class="p-10 mb-10">
             <h1 class="text-3xl text-left font-bold">Projects</h1>
-            <div class="grid grid-cols-2 md:grid-cols-4 pt-10">
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
+              <div>
+                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                <p>NAME</p>
+              </div>
             </div>
           </div>
           <!--Work Experience-->
           <div class="bg-blue-600 text-gray-100 rounded-lg p-10">
             <h1 class="text-3xl text-left font-bold">Work Experience</h1>
-            <div class="grid grid-cols-2 md:grid-cols-4 pt-10">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
               <p class="text-xl">SAMPLE TEXT</p>
               <p class="text-xl">SAMPLE TEXT</p>
               <p class="text-xl">SAMPLE TEXT</p>
