Added actual information

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="400" height="400">
         <div class="mx-auto pb-20 text-gray-100 text-center">
           <p class="text-5xl font-bold pt-10">Oke Amuwha</p>
-          <p class="mb-5 p-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac.</p>
+          <p class="mb-5 p-5">I'm really alive right now. Experiencing the universe as a human being</p>
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="100"> <!--Logo-->
         </div>
         <!--School-->
-        <div class="bg-gray-100 rounded-lg py-20">
+        <div class="bg-gray-100 rounded-tl-lg rounded-tr-lg py-20">
           <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div> <!--School svg here-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
             <p class="mb-20">Bachelor of Science in Computer Science</p>
+            <p class="text-3xl font-bold mb-5">Me!</p>
             <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
               Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
               Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
@@ -35,71 +36,102 @@
               Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
               Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
               Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
-              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.</p>
+              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+            </p>
+            <p class="text-3xl font-bold mb-5">Hobbies</p>
+            <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+              Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
+              Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
+              Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
+              Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
+              Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
+              Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
+              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+            </p>
+            <p class="text-3xl font-bold mb-5">Interests</p>
+            <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+              Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
+              Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
+              Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
+              Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
+              Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
+              Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
+              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+            </p>
 
           <!--Skills-->
           <div class="bg-blue-600 text-gray-100 rounded-xl p-10">
-            <h1 class="text-3xl text-left font-bold">Skills</h1>
+            <h1 class="text-3xl font-bold">Skills</h1>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
               <!--Skill 1-->
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">C++</p>
               </div>
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">HTML</p>
               </div>
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">Python</p>
               </div>
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">Java</p>
               </div>
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">Github</p>
               </div>
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">Figma</p>
               </div>
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">tailwindcss</p>
               </div>
               <div>
                 <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Name</p>
+                <p class="pt-2 text-lg">React JS</p>
               </div>
             </div>
           </div>
           <!--Projects-->
           <div class="p-10 mb-10">
-            <h1 class="text-3xl text-left font-bold">Projects</h1>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
+            <h1 class="text-3xl font-bold">Projects</h1>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
               <div>
                 <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                <p>NAME</p>
+                <p class="pt-2 text-lg">Portfolio</p>
+              </div>
+              <div>
+                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                <p class="pt-2 text-lg">Music Service</p>
+              </div>
+              <div>
+                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                <p class="pt-2 text-lg">Postogon</p>
               </div>
             </div>
           </div>
           <!--Work Experience-->
           <div class="bg-blue-600 text-gray-100 rounded-lg p-10">
-            <h1 class="text-3xl text-left font-bold">Work Experience</h1>
+            <h1 class="text-3xl font-bold">Work Experience</h1>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
-              <p class="text-xl">SAMPLE TEXT</p>
+              <div>
+                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                <p class="pt-2 text-lg">Allstate</p>
+              </div>
+              <div>
+                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                <p class="pt-2 text-lg">Apple</p>
+              </div>
+              <div>
+                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                <p class="pt-2 text-lg">Postogon</p>
+              </div>
             </div>
           </div>
           <hr>
