--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <div class="flex flex-col">
         <!--Cover-->
         <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="400" height="400">
-        <div class="mx-auto pb-20 text-gray-100 text-center">
+        <div class="mx-auto pb-20 text-white text-center">
           <p class="text-5xl font-bold pt-10">Oke Amuwha</p>
           <p class="mb-5 p-5">I'm really alive right now. Experiencing the universe as a human being</p>
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="100"> <!--Logo-->
         </div>
         <!--School-->
-        <div class="bg-gray-100 rounded-tl-lg rounded-tr-lg py-20">
+        <div class="bg-white rounded-tl-lg rounded-tr-lg py-20">
           <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div> <!--School svg here-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
@@ -59,90 +59,108 @@
               Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
             </p>
 
-          <!--Skills-->
-          <div class="bg-blue-600 text-gray-100 rounded-xl p-10">
-            <h1 class="text-3xl font-bold">Skills</h1>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
-              <!--Skill 1-->
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">C++</p>
-              </div>
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">HTML</p>
-              </div>
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Python</p>
-              </div>
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Java</p>
-              </div>
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Github</p>
-              </div>
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">Figma</p>
-              </div>
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">tailwindcss</p>
-              </div>
-              <div>
-                <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
-                <p class="pt-2 text-lg">React JS</p>
-              </div>
-            </div>
-          </div>
-          <!--Projects-->
-          <div class="p-10 mb-10">
-            <h1 class="text-3xl font-bold">Projects</h1>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-              <div>
-                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                <p class="pt-2 text-lg">Portfolio</p>
-              </div>
-              <div>
-                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                <p class="pt-2 text-lg">Music Service</p>
-              </div>
-              <div>
-                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                <p class="pt-2 text-lg">Postogon</p>
+            <!--Skills-->
+            <div class="bg-blue-600 text-white rounded-xl p-10">
+              <h1 class="text-3xl font-bold">Skills</h1>
+              <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
+                <!--Skill 1-->
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">C++</p>
+                </div>
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">HTML</p>
+                </div>
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">Python</p>
+                </div>
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">Java</p>
+                </div>
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">Github</p>
+                </div>
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">Figma</p>
+                </div>
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">tailwindcss</p>
+                </div>
+                <div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <p class="pt-2 text-lg">React JS</p>
+                </div>
               </div>
             </div>
-          </div>
-          <!--Work Experience-->
-          <div class="bg-blue-600 text-gray-100 rounded-lg p-10">
-            <h1 class="text-3xl font-bold">Work Experience</h1>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-              <div>
-                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                <p class="pt-2 text-lg">Allstate</p>
+            <!--Projects-->
+            <div class="p-10 mb-10">
+              <h1 class="text-3xl font-bold">Projects</h1>
+              <!--Projects in figma-->
+              <p>Figma</p>
+              <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Thing 1</p>
+                </div>
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Thing 2</p>
+                </div>
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Thing 3</p>
+                </div>
               </div>
-              <div>
-                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                <p class="pt-2 text-lg">Apple</p>
-              </div>
-              <div>
-                <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                <p class="pt-2 text-lg">Postogon</p>
+              <!--Projects in python-->
+              <p>Python</p>
+              <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Thing 4</p>
+                </div>
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Thing 5</p>
+                </div>
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Thing 6</p>
+                </div>
               </div>
             </div>
+            <!--Work Experience-->
+            <div class="bg-blue-600 text-white rounded-lg p-10">
+              <h1 class="text-3xl font-bold">Work Experience</h1>
+              <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Allstate</p>
+                </div>
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Apple</p>
+                </div>
+                <div>
+                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <p class="pt-2 text-lg">Postogon</p>
+                </div>
+              </div>
+            </div>
+            <hr>
+            <!--Footer-->
+            <footer>
+              Oke Amuwha
+              &copy 2022
+            </footer>
           </div>
-          <hr>
-          <footer>
-            Oke Amuwha
-            &copy 2022
-          </footer>
-        </div>
         </div>
       </div>
     </main>
-    <!--Footer-->
   </body>
 </html>
