Added some images

--- a/index.html
+++ b/index.html
@@ -65,35 +65,51 @@
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                 <!--Skill 1-->
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/C++.svg" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">C++</p>
                 </div>
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/Html 5.svg" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/Python.svg" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">Python</p>
                 </div>
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/Java.svg" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/GitHub.svg" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">Github</p>
                 </div>
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/Figma.svg" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/Tailwind.png" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">tailwindcss</p>
                 </div>
                 <div>
-                  <div class="w-20 h-20 rounded-full mx-auto bg-gray-500"></div>
+                  <div class="w-20 h-20 rounded-full mx-auto bg-white">
+                    <img class="mx-auto" src="images/React.svg" alt="C++" width="50">
+                  </div>
                   <p class="pt-2 text-lg">React JS</p>
                 </div>
               </div>
