Importing React.js

--- a/index.html
+++ b/index.html
@@ -63,49 +63,56 @@
             <div class="bg-blue-600 text-white rounded-xl p-10">
               <h1 class="text-3xl font-bold">Skills</h1>
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
-                <!--Skill 1-->
+                <!--C++-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/C++.svg" alt="C++" width="50">
                   </div>
                   <p class="pt-2 text-lg">C++</p>
                 </div>
+                <!--HTML-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/Html 5.svg" alt="C++" width="50">
                   </div>
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
+                <!--Python-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/Python.svg" alt="C++" width="50">
                   </div>
                   <p class="pt-2 text-lg">Python</p>
                 </div>
+                <!--Java-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/Java.svg" alt="C++" width="50">
                   </div>
                   <p class="pt-2 text-lg">Java</p>
                 </div>
+                <!--Github-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/GitHub.svg" alt="C++" width="50">
                   </div>
                   <p class="pt-2 text-lg">Github</p>
                 </div>
+                <!--Figma-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/Figma.svg" alt="C++" width="50">
                   </div>
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
+                <!--Tailwind-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/Tailwind.png" alt="C++" width="50">
                   </div>
                   <p class="pt-2 text-lg">tailwindcss</p>
                 </div>
+                <!--React-->
                 <div>
                   <div class="w-20 h-20 rounded-full mx-auto bg-white">
                     <img class="mx-auto" src="images/React.svg" alt="C++" width="50">
@@ -178,5 +185,9 @@
         </div>
       </div>
     </main>
+    <!--React stuff-->
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-tabs/dist/react-tabs.development.js"></script>
   </body>
 </html>
