Added image of school

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <!--School-->
         <div class="bg-white rounded-tl-lg rounded-tr-lg py-20">
-          <div class="w-60 h-60 rounded-full mx-auto bg-gray-500"></div> <!--School svg here-->
+          <img class="w-60 h-60 rounded-full mx-auto shadow" src="images/School Glyph.svg" alt="School glyph" width="300"> <!--School img-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
@@ -101,7 +101,7 @@
                 </div>
                 <!--Tailwind-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/Tailwind.png" alt="C++" width="80">
+                  <img class="rounded-full bg-white mx-auto py-4" src="images/Tailwind.png" alt="C++" width="80">
                   <p class="pt-2 text-lg">Tailwind</p>
                 </div>
                 <!--React-->
@@ -178,7 +178,7 @@
     <!--React stuff-->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    
     <script src="https://unpkg.com/react-tabs/dist/react-tabs.development.js"></script>
   </body>
 </html>
