--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <!--School-->
         <div class="bg-white rounded-tl-lg rounded-tr-lg py-20">
-          <img class="w-60 h-60 rounded-full mx-auto shadow" src="images/School Glyph.svg" alt="School glyph" width="300"> <!--School img-->
+          <img class="w-60 h-60 mx-auto shadow" src="images/School Glyph.svg" alt="School glyph" width="300"> <!--School img-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
